codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_with_history_shapes.snap
---
source: core/tests/suite/compact.rs
assertion_line: 4150
expression: "format_labeled_requests_snapshot(\"Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.\",\n&[(\"Local Compaction Request\", &requests[1]),\n(\"Local Post-Compaction History Layout\", &requests[2]),])"
---
Scenario: Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.

## Local Compaction Request
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first manual turn
03:message/assistant:FIRST_REPLY
04:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/user:first manual turn
01:message/user:<COMPACTION_SUMMARY>\nFIRST_MANUAL_SUMMARY
02:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
03:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
04:message/user:second manual turn
