codex-rs/core/tests/suite/snapshots/all__suite__compact__pre_sampling_model_switch_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
assertion_line: 2388
expression: "format_labeled_requests_snapshot(\"Pre-sampling compaction on model switch to a smaller context window: current behavior compacts using prior-turn history only (incoming user message excluded), and the follow-up request carries compacted history plus the new user message.\",\n&[(\"Initial Request (Previous Model)\", &requests[0]),\n(\"Pre-sampling Compaction Request\", &requests[1]),\n(\"Post-Compaction Follow-up Request (Next Model)\", &requests[2]),])"
---
Scenario: Pre-sampling compaction on model switch to a smaller context window: current behavior compacts using prior-turn history only (incoming user message excluded), and the follow-up request carries compacted history plus the new user message.

## Initial Request (Previous Model)
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:before switch

## Pre-sampling Compaction Request
00:message/developer[5]:
    [01] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [02] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [03] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [04] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [05] <PERMISSIONS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:before switch
03:message/assistant:before switch
04:message/user:<SUMMARIZATION_PROMPT>

## Post-Compaction Follow-up Request (Next Model)
00:message/user:before switch
01:message/user:<COMPACTION_SUMMARY>\nPRE_SAMPLING_SUMMARY
02:message/developer[6]:
    [01] <model_switch>\nThe user was previously using a different model....
    [02] <conventional_commits>\n## Conventional Commits\nWhen creating o...
    [03] <git_intent_notes>\n## Git Intent Notes\nFor code changes, prese...
    [04] <scratchpad_instructions>\n## Built-in Scratchpad\nThe built-in ...
    [05] <fork_help>\n## Rick Fork Guidance\nThis build includes fork-onl...
    [06] <PERMISSIONS_INSTRUCTIONS>
03:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
04:message/user:after switch
